Evaluacion 2/Microservices/Deployment-micro/clients-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clients-service
  template:
    metadata:
      labels:
        app: clients-service
    spec:
      containers:
        - name: clients-service
          image: bigbenj4/clients-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "384Mi"
              cpu: "300m"
            requests:
              memory: "256Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: clients-service
spec:
  selector:
    app: clients-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
