Evaluacion 2/Microservices/Deployment-micro/eureka-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  selector:
    app: eureka-service
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP
