Evaluacion 2/Microservices/Deployment-micro/kardex-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kardex-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kardex-service
  template:
    metadata:
      labels:
        app: kardex-service
    spec:
      containers:
        - name: kardex-service
          image: bigbenj4/kardex-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kardex-service
spec:
  selector:
    app: kardex-service
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
